@@ -349,9 +349,7 @@ EXTRA_fldigi_SOURCES += \
 	include/winserial.h \
 	sockets/Socket.cxx \
 	sockets/ClientSocket.cxx \
-	sockets/ServerSocket.cxx \
-	misc/parseUALR.cxx \
-	misc/parseQRZ.cxx
+	sockets/ServerSocket.cxx 
 
 # Additional non-source files that we distribute
 EXTRA_DIST = \
@@ -365,4 +363,7 @@ EXTRA_DIST = \
 	$(srcdir)/../data/mac/Info.plist.in \
 	$(srcdir)/../data/win32/fldigi.ico \
 	dialogs/confdialog.fl \
-	rigcontrol/rigdialog.fl
+	rigcontrol/rigdialog.fl \
+	misc/parseUALR.cxx \
+	misc/parseQRZ.cxx \
+	misc/ualr-telnet.pl
